# build-unity-project-cli

./: .gitignore  CLAUDE.md  README.md  config.example.json  install.bat  pyproject.toml  start.bat  update.bat
src/build_unity_project/: __main__.py  build_script_deployer.py  config.py  constants.py  editor_discovery.py  trigger.py  unity.py  version.py
tests/: test_config.py  test_editor_discovery.py  test_trigger.py  test_unity.py  test_version.py
tools/: tests.bat
unity_build_script/: BuildScript.cs  BuildTriggerWatcher.cs
