[project]
name = "build-unity-project"
version = "0.1.0"
description = "CLI tool to automate Unity project builds"
requires-python = ">=3.11,<3.13"
dependencies = []

[project.scripts]
build-unity = "build_unity_project.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/build_unity_project"]

[tool.pytest.ini_options]
testpaths = ["tests"]
